# rpi-thermostat

./: .gitignore  README.md  controller.py  main.py  requirements.txt  thermostat.service
.github/workflows/: pylint.yml  unittest.yml
TemperatureSensor/: Config.h  TemperatureSensor.ino
TemperatureSensorAHT20/: TemperatureSensorAHT20.ino
TemperatureSensorDHT22/: TemperatureSensorDHT22.ino
Thermostat/: Thermostat.ino
daemon/: .controller.py.swo  .controller.py.swp  .main.py.swo  .main.py.swp  .models.py.swo  .models.py.swp  config.py  controller.py  database.py  gpio_controller.py  hvac_driver.py  main.py  models.py  requirements-test.txt  requirements.txt
daemon-cpp/: CMakeLists.txt
daemon-cpp/src/: Controller.cpp  Controller.h  Models.h  Pins.h  main.cpp
daemon/test/: test_controller.py  test_gpio_controller.py  test_hvac_driver.py  test_pins.py
nginx/: nginx.conf
webapp/: config.json  index.html
webapp/css/: styles.css
webapp/js/: .heartbeat.js.swp  heartbeat.js
